<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference
		android:key="@string/pref_title_auto_center"
		android:defaultValue="@string/pref_center_option_gps"
		android:title="@string/pref_title_auto_center"
		android:entries="@array/pref_auto_center_options"
		android:entryValues="@array/pref_auto_center_options"
		android:dialogTitle="@string/pref_title_auto_center"
		/>
	<CheckBoxPreference
		android:key="@string/pref_title_auto_zoom"
		android:defaultValue="true"
		android:summaryOn="@string/pref_summary_auto_zoom_on"
		android:summaryOff="@string/pref_summary_auto_zoom_off"
		android:title="@string/pref_title_auto_zoom"
		/>
	<CheckBoxPreference
		android:key="@string/pref_title_compass"
		android:defaultValue="false"
		android:summaryOn="@string/perf_summary_compass_on"
		android:summaryOff="@string/perf_summary_compass_off"
		android:title="@string/pref_title_compass"
		/>
	<ListPreference
		android:key="@string/pref_title_coord_fmt"
		android:defaultValue="@string/pref_value_coord_fmt_ddms"
		android:title="@string/pref_title_coord_fmt"
		android:entries="@array/pref_coord_fmt_options"
		android:entryValues="@array/pref_coord_fmt_options"
		android:dialogTitle="@string/pref_title_coord_fmt"
		/>
	<CheckBoxPreference
		android:key="@string/pref_title_directquery"
		android:defaultValue="false"
		android:summaryOn="@string/pref_summary_directquery_on"
		android:summaryOff="@string/pref_summary_directquery_off"
		android:title="@string/pref_title_directquery"
		/>
	<ListPreference
		android:key="@string/pref_title_dist_unit"
		android:defaultValue="@string/pref_value_dist_unit_meters"
		android:title="@string/pref_title_dist_unit"
		android:entries="@array/pref_dist_unit_options"
		android:entryValues="@array/pref_dist_unit_options"
		android:dialogTitle="@string/pref_title_dist_unit"
		/>
	<ListPreference
		android:key="@string/pref_title_location_refresh"
		android:defaultValue="@string/pref_value_location_refresh_60"
		android:title="@string/pref_title_location_refresh"
		android:entries="@array/prof_location_refresh_options"
		android:entryValues="@array/prof_location_refresh_options"
		android:dialogTitle="@string/pref_title_location_refresh"
		/>
	<CheckBoxPreference
		android:key="@string/pref_title_satellite"
		android:defaultValue="true"
		android:summaryOn="@string/pref_summary_satellite_on"
		android:summaryOff="@string/pref_summary_satellite_off"
		android:title="@string/pref_title_satellite"
		/>
	<CheckBoxPreference
		android:key="@string/pref_title_savedata"
		android:defaultValue="false"
		android:summaryOn="@string/pref_summary_savedata_on"
		android:summaryOff="@string/pref_summary_savedata_off"
		android:title="@string/pref_title_savedata"
		/>
	<CheckBoxPreference
		android:key="@string/pref_title_show_cell_data"
		android:defaultValue="true"
		android:summaryOn="@string/pref_summary_show_cell_data_on"
		android:summaryOff="@string/pref_summary_show_cell_data_off"
		android:title="@string/pref_title_show_cell_data"
		/>
</PreferenceScreen>